--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Hi! I am Ariona</title>
+		<title>UP Indonesia #ForIndonesiaBetter</title>
 		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Raleway:100,700">
 		<link rel="stylesheet" href="style.css">
