--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<div class="bio">
-			<h1><em>Hi!</em> My Name is <strong>Ariona</strong></h1>
+			<h1><em>UP Indonesia #ForIndonesiaBetter</strong></h1>
 			<h2>the coolest front end developer ever</h2>
 			<div class="social-links">
 				<h2>Get connected with me over:</h2>
