--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	</head>
 	<body>
 		<div class="bio">
-			<h1><em>UP Indonesia #ForIndonesiaBetter</strong></h1>
-			<h2>the coolest front end developer ever</h2>
+			<h1><em>UP Indonesia</strong></h1>
+			<h2>We're working for something big #ForIndonesiaBetter</h2>
 			</div>
 		</div>
 	</body>
