--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 			<h1><em>UP Indonesia</strong></h1>
 			<h2>We're working for something big #ForIndonesiaBetter</h2>
 			</div>
-		</div>
-	</body>
-</html>
+		
+<style>
+body {
+        background-image: url("https://upindonesia.github.io/upindonesia/img.jpg");
+} 
+ 
+</style>
